# TeiaCareRabbitMQClient

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  conanfile.py
cmake/: examples.cmake
rabbitmq_client/: CMakeLists.txt  conanfile.txt
rabbitmq_client/examples/: simple_client.cpp
rabbitmq_client/include/teiacare/rabbitmq_client/: channel.hpp  rabbitmq_client.hpp  version.hpp
rabbitmq_client/src/: channel.cpp  rabbitmq_client.cpp
rabbitmq_client/tests/: main.cpp
